--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ testing =
     black>=22.8.0
 
 [options.package_data]
-mongodatabaseconnnect=py.typed
+pineconeutils=py.typed
 
 [flake8]
 max-line-length = 160
