--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 numpy
 ensure
+pytest
 python-docx==1.1.2
 openpyxl==3.1.3
 llama-index-core==0.10.43
@@ -12,3 +13,5 @@ PyPDF2
 cohere
 pinecone-client
 openai
+
+-e .
