--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,6 @@ deps = -rrequirements_dev.txt
 commands = 
     flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
     flake8 src --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    mypy src/ --namespace-packages --explicit-package-bases --ignore-missing-imports --cache-dir=/dev/null
+    mypy src/ --namespace-packages --explicit-package-bases --ignore-missing-imports
     pytest -v tests/unit
     pytest -v tests/integration
